cmake_minimum_required(VERSION 3.20 FATAL_ERROR)

project(vtktutorial)

find_package(VTK REQUIRED)

add_subdirectory(tutorial_step_1)
add_subdirectory(tutorial_step_2)
add_subdirectory(tutorial_step_3)
add_subdirectory(tutorial_step_4)
add_subdirectory(tutorial_step_5)
add_subdirectory(tutorial_step_6)
